# TNT

./: .gitignore  README.md
Python/: README.md
Python/ROC/: analyze_pos_neg.py  get_ROC_data.py  get_ip_pairs_distribution.py
Python/ip_addresses/: read_warts_ips.py
Python/mpls_tunnels/: get_mpls_tunnels.py
Python/probe_cost/: compute_tnt_cost.py
Python/stats/: count_lse_ttls.py  count_tunnels.py
TNT/: README.md
TNT/scamper-tnt-cvs-20180523a/: .cvsignore  Makefile.in  aclocal.m4  bootstrap.pl  build-man-pdfs.pl  config.h.in  configure  configure.ac  mjl_list.c  mjl_list.h  mjl_prefixtree.c  mjl_splaytree.c  mjl_splaytree.h  utils.c  utils.h
TNT/scamper-tnt-cvs-20180523a/.deps/: mjl_heap.Po  mjl_list.Po  mjl_patricia.Plo  mjl_prefixtree.Po  mjl_splaytree.Plo  mjl_splaytree.Po  scamper-mjl_heap.Po  scamper-mjl_list.Po  scamper-mjl_patricia.Po  scamper-mjl_splaytree.Po  scamper-utils.Po  utils.Plo  utils.Po
TNT/scamper-tnt-cvs-20180523a/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
TNT/scamper-tnt-cvs-20180523a/scamper/: .cvsignore  Makefile  Makefile.am  Makefile.in  scamper.1  scamper.c  scamper.h  scamper_addr.c  scamper_addr2mac.c  scamper_control.c  scamper_debug.c  scamper_debug.h  scamper_dl.c  scamper_fds.c  scamper_file.c  scamper_file.h  scamper_file_arts.c  scamper_file_warts.c  scamper_firewall.c  (+23 more)
TNT/scamper-tnt-cvs-20180523a/utils/sc_tnt/: Makefile.am  Makefile.in  sc_tnt.1  sc_tnt.c
TNT/scamper-tnt-cvs-20180523a/utils/sc_tnt/.deps/: sc_tnt.Po  sc_tracetun.Po
(+197 files in other folders)
